<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_BMI"
        android:icon="@drawable/baseline_calculate_24"
        android:title="@string/title_BMI" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/baseline_calculate_24"
        android:title="@string/title_calories" />

    <item
        android:id="@+id/recipeFragment"
        android:icon="@drawable/recipe_24"
        android:title="@string/title_recipe" />

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/recipe_24"
        android:title="@string/quiz" />

    <item
        android:id="@+id/nav_chart"
        android:icon="@drawable/baseline_chart_24"
        android:title="@string/title_chart" />

</menu>